# SolarSystem

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
CelestialPhysics/: CMakeLists.txt
CelestialPhysics/headers/: CosmicBody.cpp  CosmicBody.hpp  ObjectsComponents.hpp  OrbitalMechanics.hpp  OrbitalPoint.hpp  OrbitingBody.hpp  PhysicalConstants.hpp  Planet.hpp  SolarSystemModel.hpp  Star.hpp
CelestialPhysics/src/: CosmicBody.cpp  OrbitalMechanics.cpp  OrbitingBody.cpp  Planet.cpp  SolarSystemModel.cpp  Star.cpp
GraphicalObjects/: CMakeLists.txt
GraphicalObjects/headers/: ColorsVTK.hpp  GraphicalObjectsComponents.hpp  ObjectBase.hpp  Sphere.hpp  XYZArrows.hpp  cube.hpp
GraphicalObjects/src/: ObjectBase.cpp  Sphere.cpp  XYZArrows.cpp  cube.cpp
GraphicalRendering/: CMakeLists.txt  VtkViewer.cpp  VtkViewer.h
GraphicalRendering/headers/: cube.hpp
GraphicalRendering/src/: cube.cpp
Physics/: CMakeLists.txt
Physics/headers/: Geometry.hpp  OrbitalMechanics.hpp  OrbitalPoint.hpp  PhysicalConstants.hpp
Physics/src/: Geometry.cpp  OrbitalMechanics.cpp
SolarSystem/: CMakeLists.txt  icon.aps  icon.rc  main.cpp
SolarSystem/headers/: ContextWindow.hpp  DisplayWIndow.hpp
SolarSystem/src/: ContextWindow.cpp  DisplayWindow.cpp
SolarSystemCore/: CMakeLists.txt
SolarSystemCore/headers/: ContextWindow.hpp  ControlWindow.hpp  DisplayWindow.hpp  GraphicalRunner.hpp  GraphicalRunnerImpl.hpp  GraphicalWindow.hpp  ObjectCreationWindow.hpp  ObjectsInfoWindow.hpp  VTKWindow.hpp
SolarSystemCore/src/: ContextWindow.cpp  ControlWindow.cpp  DisplayWindow.cpp  GraphicalRunner.cpp  GraphicalRunnerImpl.cpp  ObjectCreationWindow.cpp  ObjectsInfoWindow.cpp  VTKWindow.cpp
SolarSystemRendering/: CMakeLists.txt
SolarSystemRendering/headers/: ContextWindow.hpp  GraphicalRunner.hpp  GraphicalRunnerImpl.hpp  GraphicalWindow.hpp  ObjectCreationWindow.hpp  ObjectsInfoWindow.hpp  SolarSystemVTKInteractor.hpp  VTKWindow.hpp
SolarSystemRendering/src/: ContextWindow.cpp  GraphicalWindow.cpp  ObjectCreationWindow.cpp  ObjectsInfoWindow.cpp  SolarSystemVTKInteractor.cpp  VTKWindow.cpp
StellarModel/: CMakeLists.txt
StellarModel/headers/: CosmicBody.hpp  ObjectsComponents.hpp  OrbitingBody.hpp  Planet.hpp  SolarSystemModel.hpp  Star.hpp
StellarModel/src/: CosmicBody.cpp  OrbitingBody.cpp  Planet.cpp  SolarSystemModel.cpp  Star.cpp
Utils/: CMakeLists.txt
Utils/headers/: AnglesOperations.hpp
Utils/src/: AnglesOperations.cpp
imgui/: CMakeLists.txt
imgui/imgui_/: imgui_impl_opengl3.h
imgui/imgui_vtk/: VtkViewer.cpp  VtkViewer.h
